Changelog
=========

0.3 (unreleased)
----------------

- Nothing changed yet.


0.2 (2012-08-23)
----------------

- Store a cookie with the username so we don't have to make an Ajax
  call everytime. [vincent]

- Fixed an error happening with anonymous users. [vincent]


0.1 (2012-01-12)
----------------

- Initial release [vincent]