@@ -4,7 +4,8 @@ Changelog
 0.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Splitted the zestcachetuning.js file so we have one version for
+  authenticated users and one for anonymous. [vincent]
 
 
 0.2 (2012-08-23)
